docs(app): drop install guidance for outdated react-native versions
- gradle 7.3+ has been default for quite some time
- multidex is not valid on android minSdk level in place for quite some time
- hermes works fine now and has for quite some time
- android build memory we suggested as a fix has been default fo rquite some time
- manual linking is history from another era